// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading block changes heading level 1`] = `
"<!-- wp:heading {"level":6} -->
<h6 class="wp-block-heading"></h6>
<!-- /wp:heading -->"
`;

exports[`Heading block inserts block 1`] = `
"<!-- wp:heading -->
<h2 class="wp-block-heading"></h2>
<!-- /wp:heading -->"
`;

exports[`Heading block should merge with an empty Paragraph block and keep being the Heading block 1`] = `
"<!-- wp:heading -->
<h2 class="wp-block-heading">A quick brown fox jumps over the lazy dog.</h2>
<!-- /wp:heading -->"
`;

exports[`Heading block should set a background color 1`] = `
"<!-- wp:heading {"backgroundColor":"luminous-vivid-orange"} -->
<h2 class="wp-block-heading has-luminous-vivid-orange-background-color has-background">A quick brown fox jumps over the lazy dog.</h2>
<!-- /wp:heading -->"
`;

exports[`Heading block should set a text color 1`] = `
"<!-- wp:heading {"textColor":"pale-pink"} -->
<h2 class="wp-block-heading has-pale-pink-color has-text-color">A quick brown fox jumps over the lazy dog.</h2>
<!-- /wp:heading -->"
`;
